--- a/app/views/tasks/_show.html.erb
+++ b/app/views/tasks/_show.html.erb
@@ -28,14 +28,18 @@
         <label class= "form-label" style='color: #7795c1;'><%=t :deadline%></label>
         <div class="form-control-plaintext text-justify">
           <span>
-            <% @jalali = JalaliDate.to_jalali(@task.deadline)%>
-            <%= @jalali.year%>/<%= @jalali.month%>/<%= @jalali.day%> (<%= task.deadline_time.strftime('%H:%M')%>)
+            <% if !@task.deadline.blank?%>
+              <% @jalali = JalaliDate.to_jalali(@task.deadline)%>
+              <%= @jalali.year%>/<%= @jalali.month%>/<%= @jalali.day%> (<%= task.deadline_time.strftime('%H:%M')%>)
+            <%end%>
           </span>
         </div>
       </div>
       <div class="form-group small">
         <label class= "form-label" style='color: #7795c1;'><%=t :status%></label>
+        <% if !@task.status.blank?%>
         <div class="form-control-plaintext text-justify"><%= @task.status.title %></div>
+        <%end%>
       </div>
     </div>
   </div>
