--- a/app/views/advertisers/_advertiser_block.html.erb
+++ b/app/views/advertisers/_advertiser_block.html.erb
@@ -24,8 +24,17 @@
   </div>
 </div>
 
+<% if !@advertiser.blank?%>
+<div id="shoa-box"></div>
+<div id="shoa-modal"></div>
+<input type="hidden" id="shoa-type"  value="Post">
+<input type="hidden" id="shoa-source-id"  value="<%= @advertiser.id%>">
+<input type="hidden" id="shoa-title"  value="<%= @advertiser.title%>">
+<input type="hidden" id="shoa-content"  value="<%= @advertiser.details%>">
+<%end%>
+
 <% if params[:action] == 'show'%>
-<div class="list-group list-group-transparent mb-2 text-center">
+<div class="list-group list-group-transparent mb-2 mt-4 text-center">
   <%= link_to @advertiser, class: "list-group-item list-group-item-action active small", style:'font-weight:normal;',  method: :delete, data: { confirm: 'Are you sure?' } do%>
   <i class="fe fe-trash" style="vertical-align:middle;"></i> <%=t :destroy%>
   <%end%>
